Legal facts internal api #pn-2074
