# src/main/java/it/pagopa/pn/deliverypush/rest/PnInternalLegalFactsController.java
@@ -1,7 +1,9 @@
 package it.pagopa.pn.deliverypush.rest;
 
-import it.pagopa.pn.deliverypush.generated.openapi.server.v1.api.LegalFactsApi;
-import it.pagopa.pn.deliverypush.generated.openapi.server.v1.dto.*;
+import it.pagopa.pn.deliverypush.generated.openapi.server.v1.api.LegalFactsPrivateApi;
+import it.pagopa.pn.deliverypush.generated.openapi.server.v1.dto.LegalFactCategory;
+import it.pagopa.pn.deliverypush.generated.openapi.server.v1.dto.LegalFactDownloadMetadataResponse;
+import it.pagopa.pn.deliverypush.generated.openapi.server.v1.dto.LegalFactListElement;
 import it.pagopa.pn.deliverypush.service.GetLegalFactService;
 import it.pagopa.pn.deliverypush.utils.LegalFactUtils;
 import org.springframework.http.ResponseEntity;
@@ -13,43 +15,35 @@ import reactor.core.publisher.Mono;
 import java.util.List;
 
 @RestController
-public class PnLegalFactsController implements LegalFactsApi {
+public class PnInternalLegalFactsController implements LegalFactsPrivateApi {
 
     private final GetLegalFactService getLegalFactService;
 
-    public PnLegalFactsController(GetLegalFactService getLegalFactService) {
+    public PnInternalLegalFactsController(GetLegalFactService getLegalFactService) {
         this.getLegalFactService = getLegalFactService;
     }
 
     @Override
-    public Mono<ResponseEntity<LegalFactDownloadMetadataResponse>> getLegalFact(
-            String xPagopaPnUid,
-            CxTypeAuthFleet xPagopaPnCxType, 
+    public Mono<ResponseEntity<LegalFactDownloadMetadataResponse>> getLegalFactPrivate(
             String xPagopaPnCxId,
             String iun,
             LegalFactCategory legalFactType,
             String legalFactId,
-            List<String> xPagopaPnCxGroups,
             String mandateId,
             ServerWebExchange exchange) {
-        
+
         return Mono.fromSupplier(() ->
                 ResponseEntity.ok(getLegalFactService.getLegalFactMetadata(iun, legalFactType, legalFactId, xPagopaPnCxId, mandateId ))
         );
     }
-    
-    //TODO Da analizzare, il FE non dovrebbe utilizzarlo, probabilmente può essere eliminato
+
     @Override
-    public Mono<ResponseEntity<Flux<LegalFactListElement>>> getNotificationLegalFacts(
-            String xPagopaPnUid,
-            CxTypeAuthFleet xPagopaPnCxType,
+    public Mono<ResponseEntity<Flux<LegalFactListElement>>> getNotificationLegalFactsPrivate(
             String xPagopaPnCxId,
             String iun,
-            List<String> xPagopaPnCxGroups,
             String mandateId,
             ServerWebExchange exchange) {
 
-        
         return Mono.fromSupplier(() -> {
             List<LegalFactListElement> legalFacts = getLegalFactService.getLegalFacts(iun, xPagopaPnCxId, mandateId);
             Flux<LegalFactListElement> fluxFacts = Flux.fromStream(legalFacts.stream().map(LegalFactUtils::convert));
